gitops/platform/argo-workflows/argo-workflows-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: argoworkflows-server
    namespace: argo
  spec:
    rules:
    - host: argo.172.19.0.3.nip.io
      http:
        paths:
        - backend:
            service:
              name: argo-server
              port:
                number: 2746
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 172.19.0.3
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
